; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/scrub/extr_bmap.c_xchk_bmap_cow.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/scrub/extr_bmap.c_xchk_bmap_cow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_scrub = type { i32 }

@ENOENT = common dso_local global i32 0, align 4
@XFS_COW_FORK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xchk_bmap_cow(%struct.xfs_scrub* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xfs_scrub*, align 8
  store %struct.xfs_scrub* %0, %struct.xfs_scrub** %3, align 8
  %4 = load %struct.xfs_scrub*, %struct.xfs_scrub** %3, align 8
  %5 = getelementptr inbounds %struct.xfs_scrub, %struct.xfs_scrub* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @xfs_is_reflink_inode(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ENOENT, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load %struct.xfs_scrub*, %struct.xfs_scrub** %3, align 8
  %14 = load i32, i32* @XFS_COW_FORK, align 4
  %15 = call i32 @xchk_bmap(%struct.xfs_scrub* %13, i32 %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %12, %9
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @xfs_is_reflink_inode(i32) #1

declare dso_local i32 @xchk_bmap(%struct.xfs_scrub*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
